stacks/media/radarr/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  # namespace: default
spec:
  ports:
    - port: 8989
      protocol: TCP
      # targetPort: 80
  selector:
    app: radarr
  type: ClusterIP
